syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package battle;

// The greeting service definition.
service Battle {
  // Sends a greeting
  rpc missile_launched (stream MissileLaunchRequest) returns (MissileLaunchReply) {}

  rpc SendGameDetails (GameDetailsRequest) returns (GameDetailsReply) {}

}

// The request message containing the user's name.
message MissileLaunchRequest {
  int32 x_coordinate = 1;
  int32 y_coordinate = 2;
}

message MissileLaunchReply {
  string message = 1;
}

message GameDetailsReply {
  string message = 1;
}

message GameDetailsRequest {

  int32 N = 1;
  int32 M = 2;
  int32 T = 3;
  int32 t = 4;

}

