syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package soldierclient;

// The greeting service definition.
service SoldierClient {
  // Sends a greeting
  rpc SoldierReady (SoldierReadyRequest) returns (stream MissileApproachingReply) {}
  rpc missile_approaching (MissileApproachingRequest) returns (MissileApproachingReply) {}

}

// The request message containing the user's name.
message MissileApproachingRequest {
  int32 x_coordinate = 1;
  int32 y_coordinate = 2;
}

message MissileApproachingReply {
  int32 x_coordinate = 1;
  int32 y_coordinate = 2;
}

message SoldierReadyRequest {
  string message = 1;
}
